RESOLVED FIXED250023
[WPE][GTK] WEBKIT_PLUGIN_ERROR_WILL_HANDLE_LOAD is gone, but still required
https://bugs.webkit.org/show_bug.cgi?id=250023
Summary [WPE][GTK] WEBKIT_PLUGIN_ERROR_WILL_HANDLE_LOAD is gone, but still required
Michael Catanzaro
Reported 2023-01-03 06:38:10 PST
So we deprecated WebKitPluginError and removed all the error types from the new API version. But now it's no longer possible to view media like e.g. https://bug-249844-attachments.webkit.org/attachment.cgi?id=464289. The load fails with WEBKIT_PLUGIN_ERROR_WILL_HANDLE_LOAD. The browser is supposed to ignore it, but can't. This design is unfortunate and I'm not sure what the best way to fix it would be.
Attachments
Carlos Garcia Campos
Comment 1 2023-01-10 02:13:36 PST
EWS
Comment 2 2023-01-10 22:52:15 PST
Committed 258772@main (cb508f4d82bf): <https://commits.webkit.org/258772@main> Reviewed commits have been landed. Closing PR #8448 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.