[WPE][GTK] WEBKIT_PLUGIN_ERROR_WILL_HANDLE_LOAD is gone, but still required https://bugs.webkit.org/show_bug.cgi?id=250023

Reviewed by Michael Catanzaro.

Add new error domain WebKitMediaError and code WEBKIT_MEDIA_ERROR_WILL_HANDLE_LOAD.

* Source/WebKit/Shared/API/APIError.cpp:
(API::Error::webKitPluginErrorDomain):
* Source/WebKit/UIProcess/API/glib/WebKitError.cpp:
* Source/WebKit/UIProcess/API/glib/WebKitError.h.in:
* Source/WebKit/UIProcess/API/glib/WebKitPrivate.cpp:
(toWebKitError):
(toWebCoreError):
* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewLoadFail):

Canonical link: https://commits.webkit.org/258772@main